--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,18 @@
   "dependencies": {
     "@angular/animations": "~11.2.3",
     "@angular/cdk": "^11.2.9",
-    "@angular/common": "~11.2.3",
+    "@angular/common": "^11.2.11",
     "@angular/compiler": "~11.2.3",
-    "@angular/core": "~11.2.3",
+    "@angular/core": "^11.2.11",
     "@angular/forms": "~11.2.3",
     "@angular/material": "^11.2.9",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@material-ui/icons": "^4.11.2",
+    "ngx-audio-player": "^11.0.4",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
