--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.5",
+    "ngx-audio-player": "^11.0.4",
     "path": "^0.12.7"
   }
 }
